--- a/mapbox-gl-draw/example/index.html
+++ b/mapbox-gl-draw/example/index.html
@@ -27,7 +27,7 @@
     <div id="root"></div>
     <script src="/mapbox-gl/mapbox-gl-unminified.js"></script>
     <script src="/turf/turf.min.js"></script>
-    <script src="/mapbox-gl-draw/mapbox-gl-draw-unminified.js"></script>
+    <script src="/mapbox-gl-draw/mapbox-gl-draw.umd.unminified.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
